# AI-Agent

ai_linkedin_newsletter/: README.md  pyproject.toml
ai_linkedin_newsletter/src/ai_linkedin_newsletter/: crew.py  main.py
ai_linkedin_newsletter/src/ai_linkedin_newsletter/config/: agents.yaml  tasks.yaml
ai_linkedin_newsletter/src/ai_linkedin_newsletter/tools/: custom_tool.py
post_agent/: README.md  pyproject.toml
post_agent/src/post_agent/: crew.py  main.py
voice_crew/voice-tts/: en_US-bryce-medium.onnx
