[project]
name = "ai_linkedin_newsletter"
version = "0.1.0"
description = "ai-linkedin-newsletter using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
ai_linkedin_newsletter = "ai_linkedin_newsletter.main:run"
run_crew = "ai_linkedin_newsletter.main:run"
train = "ai_linkedin_newsletter.main:train"
replay = "ai_linkedin_newsletter.main:replay"
test = "ai_linkedin_newsletter.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
