[project]
name = "post_agent"
version = "0.1.0"
description = "post-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
post_agent = "post_agent.main:run"
run_crew = "post_agent.main:run"
train = "post_agent.main:train"
replay = "post_agent.main:replay"
test = "post_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
